tests/integration/snapshots/integration__conformance__i_string_inverted_surrogates_u+1d11e.json.snap
---
source: tests/integration/conformance.rs
expression: output
---
command: "jjp"
status: 0
success: true
stdout ---
["\uDd1e\uD834"]
stderr ---
