tests/integration/snapshots/integration__conformance__i_string_iso_latin_1.json.snap
---
source: tests/integration/conformance.rs
expression: output
---
args: []
status: 1
success: false
stdout ---
raw bytes: [91, 34, 233, 34, 93]
stderr ---
error: source did not contain valid utf8
 --> stdin
  |
