tests/integration/snapshots/integration__conformance__i_string_not_in_unicode_range.json-format.snap
---
source: tests/integration/conformance.rs
expression: output.snapshot_display()
---
args: ["format"]
status: 1
success: false
stdin ---
raw bytes: [91, 34, 244, 191, 191, 191, 34, 93]
stdout ---

stderr ---
error: code point U+13FFFF exceeds maximum U+10FFFF
 --> stdin:1:3
  |
1 | ["����"]
  |   ^
