tests/integration/snapshots/integration__conformance__i_string_overlong_sequence_2_bytes.json-format.snap
---
source: tests/integration/conformance.rs
expression: output.snapshot_display()
---
args: ["format"]
status: 1
success: false
stdin ---
raw bytes: [91, 34, 192, 175, 34, 93]
stdout ---

stderr ---
error: byte 0xC0 cannot start a UTF-8 sequence
 --> stdin:1:3
  |
1 | ["��"]
  |   ^
